# http-server-cpp

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: lib.cpp.F7492BD815E6A81A.idx  lib.h.AC5B4440204441AB.idx  server.cpp.4DDE237186152666.idx  utils.cpp.1FE592F4C61A405A.idx  utils.h.3D7574882F5DA9A4.idx
src/: README.md  lib.cpp  lib.h  notes.md  output.txt  server.cpp  utils.cpp  utils.h
